[package]
name = "rust-hpc-communication-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "time", "net"] }
derive_builder = "0.20.2"
clap = { version = "4.5.21", features = ["derive"] }
rand = "0.9.0-beta.0"
csv = "1.3.1"
mpi = "0.8.0"